--- a/css/screen.css
+++ b/css/screen.css
@@ -5,6 +5,7 @@ body {
     font-weight: bold;
     font-size: 20px;
     font-family: 'Barlow Semi Condensed', sans-serif;
+    line-height: 1.6em;
   }
   
   div {
